--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -3,7 +3,7 @@
   font-family: 'Poiret One', cursive;
   bottom: 0;
   position: absolute;
-  font-size: 1.3rem;
+  font-size: .7rem;
   width: 100%;
   text-align: center;
   padding-bottom: 7px;
