--- a/src/assets/css/home-page.css
+++ b/src/assets/css/home-page.css
@@ -15,6 +15,7 @@ html, body, #react-div {
   display: block;
   width: 100%;
   height: 100%;
+  font-size: 14px;
   overflow: hidden;
 
   -webkit-touch-callout: none; /* iOS Safari */
