--- a/src/components/idea/tile/tile.css
+++ b/src/components/idea/tile/tile.css
@@ -24,14 +24,24 @@
   display: block;
 }
 
+:local(.tile__title),
 :local(.tile__author) {
-  font-size: 14px;
-  font-weight: 700;
+  font-size: 1rem;
+  line-height: 2;
+  white-space: nowrap;
+  display: block;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+:local(.tile__title) {
+  font-weight: 600;
 }
 
 :local(.tile__icons) {
   width: 100%;
-  min-height: 30px;
+  padding-left: 5px;
+  padding-right: 5px;
   background-color: #0000000a;
   display: block;
   position: absolute;
