--- a/src/components/idea-page/tile/tile.css
+++ b/src/components/idea-page/tile/tile.css
@@ -1,7 +1,7 @@
 :local(.tile) {
   position: relative;
   display: inline-block;
-  border-radius: 2px;
+  border: 1px solid #d8d8d899;
   background-color: #69656b1f;
   margin: 0.5rem;
   min-height: 180px;
@@ -35,7 +35,6 @@
 }
 
 :local(.tile__title) {
-  font-weight: 600;
 }
 
 :local(.tile__icons) {
@@ -43,6 +42,7 @@
   padding-left: 5px;
   padding-right: 5px;
   background-color: #0000000a;
+  border-top: 1px solid #d8d8d899;
   display: block;
   position: absolute;
   bottom: 0;
