text area added to conversation page

--- a/src/components/home-page/HomePage.css
+++ b/src/components/home-page/HomePage.css
@@ -35,6 +35,8 @@ h1, h2, h3 {
   padding: 0;
 }
 
+textarea, select, input, button { outline: none; }
+
 :local(.container) {
   margin: 0;
   padding: 0;
