--- a/src/components/text-area/TextArea.css
+++ b/src/components/text-area/TextArea.css
@@ -1,7 +1,31 @@
+.textarea__container {
+  width: 100%;
+  bottom: 1rem;
+  margin-top: 6rem;
+}
 .textarea {
-  width: inherit;
   height: 6rem;
-  position: fixed;
-  bottom: 3rem;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: block;
   resize: none;
+  border: 1px solid #999;
+}
+.textarea:focus {
+  border: 1px solid #000;
+}
+.textarea__submit {
+  padding: .5rem;
+  padding-right: 1rem;
+  padding-left: 1rem;
+  margin: 1rem 0 1rem;
+  font-size: 0.8rem;
+  display: block;
+  cursor: pointer;
+  float: right;
+  border: 1px solid #999;
+}
+.textarea__submit:hover {
+  background-color: #f1f1f1;
 }
