--- a/src/components/home-page/HomePage.css
+++ b/src/components/home-page/HomePage.css
@@ -16,7 +16,8 @@ html, body, #react-div {
   width: 100%;
   height: 100%;
   font-size: 14px;
-  overflow: scroll;
+  margin: 0;
+  padding: 0;
 }
 
 h1, h2, h3 {
