remove css hover effect

--- a/src/components/home-page/HomePage.css
+++ b/src/components/home-page/HomePage.css
@@ -31,6 +31,7 @@ h1, h2, h3 {
 a, a:hover, a:focus, a:visited, a:link, a:active {
   color: inherit; /* blue colors for links too */
   text-decoration: none; /* no underline */
+  opacity: 1;
 }
 
 textarea, select, input, button { outline: none; }
