--- a/src/components/idea-page/tile/tile.css
+++ b/src/components/idea-page/tile/tile.css
@@ -1,4 +1,4 @@
-:local(.tile) {
+.tile {
   position: relative;
   display: inline-block;
   border: 1px solid #d8d8d899;
@@ -9,22 +9,34 @@
   min-width: 50px;
   overflow: hidden;
   color: #000;
-}
-
-:local(.tile:hover) {
-  background-color: #f7f7f79e;
   cursor: pointer;
 }
 
-:local(.tile__container) {
+.tile:hover {
+  background-color: #f7f7f79e;
+
+}
+
+.tile--no-border {
+  border: none;
+  background: none;
+  cursor: default;
+  overflow: visible;
+}
+
+.tile--no-border:hover {
+  background: none;
+}
+
+.tile__container {
   width: 100%;
   height: 100%;
   padding: 15px;
   display: block;
 }
 
-:local(.tile__title),
-:local(.tile__author) {
+.tile__title,
+.tile__author {
   font-weight: 300;
   line-height: 2;
   white-space: nowrap;
@@ -33,11 +45,11 @@
   overflow: hidden;
 }
 
-:local(.tile__author) {
+.tile__author {
   font-size: 0.8rem;
 }
 
-:local(.tile__icons) {
+.tile__icons {
   width: 100%;
   padding-left: 5px;
   padding-right: 5px;
