--- a/src/components/idea-page/IdeaPage.css
+++ b/src/components/idea-page/IdeaPage.css
@@ -1,46 +1,10 @@
 :local(.ideaMain) {
   padding: 1.5rem;
 }
-.idea__group {
-  padding: 3rem 7rem;
-}
-.idea__group__input {
-  display: block;
-  margin: 1rem auto;
-  border: 0;
-  outline: 0;
-  background: transparent;
-  border-bottom: 1px solid #5d5d5d;
-  width: 25rem;
-}
-.idea__group__text__area {
-  display: block;
-  background: transparent;
-  margin: 1rem auto;
-  resize: none;
-  width: 25rem;
-  border: none;
-  border-bottom: 1px solid #5d5d5d;
-  height: 5rem;
-}
-.idea__group__input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 30px white inset;
-}
-.idea__group__submit {
-  display: block;
-  margin: 2rem auto;
-  background: none;
-  padding: .5rem 1rem;
-  border: 1px solid #000;
-  color: #000;
-  font-size: 0.9rem;
-  transition: all 0.2s ease-in-out;
-}
-.idea__group__submit:hover,
-.idea__group__submit:focus {
-  color: #fff;
-  background-color: #000;
-}
-.idea__new {
+.idea__new__button {
   display: inline;
+}
+.idea__new__modal {
+  padding: 5rem 8rem;
+  letter-spacing: 1.3px;
 }
