--- a/src/components/idea-page/tile/cube/Cube.css
+++ b/src/components/idea-page/tile/cube/Cube.css
@@ -13,7 +13,7 @@
   border-style: solid;
   border-width: 1px;
   border-color: #fff;
-  background-color: #f7f7f7;
+  background-color: #e4e4e4;
   width: 50%;
   height: 50%;
   display: inline-block;
