--- a/src/components/idea-page/tile/tile.css
+++ b/src/components/idea-page/tile/tile.css
@@ -10,11 +10,21 @@
   overflow: hidden;
   color: #000;
   cursor: pointer;
+  transition: .2s transform linear;
+}
+
+.tile--photo {
+  border: none;
+  background-size: cover;
+  background-position: center center;
+}
+
+.tile--no-hover:hover {
+  transform: none !important; /* fix me */
 }
 
 .tile:hover {
-  background-color: #f7f7f79e;
-
+  transform: scale(1.005);
 }
 
 .tile--no-border {
@@ -30,9 +40,15 @@
 
 .tile__container {
   width: 100%;
-  height: 100%;
   padding: 15px;
-  display: block;
+  position: absolute;
+}
+
+.tile__container--photo {
+  padding: 15px;
+  bottom: 0;
+  text-align: right;
+  color: #fff;
 }
 
 .tile__title,
@@ -44,9 +60,12 @@
   text-overflow: ellipsis;
   overflow: hidden;
 }
-
+.tile__title {
+  letter-spacing: 1.7px;
+}
 .tile__author {
   font-size: 0.8rem;
+  letter-spacing: 1.2px;
 }
 
 .tile__icons {
