--- a/src/components/home-page/HomePage.css
+++ b/src/components/home-page/HomePage.css
@@ -1,40 +1,3 @@
-@font-face {
-  font-family: 'Poiret One';
-  font-style: normal;
-  font-weight: 400;
-  src: url('./fonts/poiret-one-v5-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local('Poiret One'), local('PoiretOne-Regular'),
-       url('./fonts/poiret-one-v5-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('./fonts/poiret-one-v5-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('./fonts/poiret-one-v5-latin-regular.woff') format('woff'), /* Modern Browsers */
-       url('./fonts/poiret-one-v5-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-       url('./fonts/poiret-one-v5-latin-regular.svg#PoiretOne') format('svg'); /* Legacy iOS */
-}
-
-html, body, #react-div {
-  width: 100%;
-  height: 100%;
-  font-size: 14px;
-  margin: 0;
-  padding: 0;
-}
-
-h1, h2, h3 {
-  font-size: 2rem;
-  margin: 0.5rem;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  padding: 0;
-}
-
-a, a:hover, a:focus, a:visited, a:link, a:active {
-  color: inherit; /* blue colors for links too */
-  text-decoration: none; /* no underline */
-  opacity: 1;
-}
-
-textarea, select, input, button { outline: none; }
-
 :local(.container) {
   margin: 0;
   padding: 0;
@@ -68,10 +31,29 @@ textarea, select, input, button { outline: none; }
   font-weight: 500;
 }
 
-.svg-icon {
-    height: 1em;
-    margin-top: -4px;
-    pointer-events: none;
-    vertical-align: middle;
-    width: 1em;
+:local(.footer) {
+  color: rgba(255, 255, 255, 0.73);
+  font-family: 'Poiret One', cursive;
+  bottom: 0;
+  position: absolute;
+  font-size: 1.2rem;
+  width: 100%;
+  text-align: center;
+  padding-bottom: 7px;
+  margin: 0;
+  display: block;
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
+/* iPhone X or smaller */
+@media only screen and (max-device-width: 812px) {
+    :local(.footer){
+      font-size: 3vmin;
+    }
 }
