--- a/src/style/index.css
+++ b/src/style/index.css
@@ -42,3 +42,13 @@ textarea, select, input, button { outline: none; }
     vertical-align: middle;
     width: 1em;
 }
+
+.no-touch {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
