--- a/src/style/index.css
+++ b/src/style/index.css
@@ -14,11 +14,9 @@
 html, body, #react-div {
   width: 100%;
   height: 100%;
-  font-size: 14px;
   margin: 0;
   padding: 0;
 }
-
 h1, h2, h3 {
   font-size: 2rem;
   margin: 0.5rem;
@@ -33,6 +31,12 @@ a, a:hover, a:focus, a:visited, a:link, a:active {
   opacity: 1;
 }
 
+label {
+  text-transform: capitalize;
+  font-size: 1em;
+  line-height: 30px;
+  letter-spacing: .12rem;
+}
 textarea, select, input, button { outline: none; }
 
 .svg-icon {
@@ -51,4 +55,23 @@ textarea, select, input, button { outline: none; }
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+}
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+::placeholder {
+  font-size: 1.5rem;
+  opacity: 0.5;
+}
+
+* , *:before, *:after {
+  box-sizing:border-box;
+  -moz-box-sizing:border-box;
+  -webkit-box-sizing:border-box;
+  -ms-box-sizing:border-box;
 }
