--- a/src/style/index.css
+++ b/src/style/index.css
@@ -11,11 +11,18 @@
        url('./fonts/poiret-one-v5-latin-regular.svg#PoiretOne') format('svg'); /* Legacy iOS */
 }
 
+html {
+  overflow: hidden;
+}
+
 html, body, #react-div {
   width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
+}
+
+body, #react-div {
   overflow: overlay;
 }
 
