--- a/src/components/resource-page/books/Books.css
+++ b/src/components/resource-page/books/Books.css
@@ -18,7 +18,7 @@
   position: absolute;
   line-height: 5rem;
   margin: 0 2rem;
-  z-index: 2;
+  z-index: 1;
   color: #4e4c4c;
   cursor: pointer;
 }
@@ -43,13 +43,12 @@
 @media (orientation: portrait) {
   .books-container__main {
     top: 0;
-    padding: 0;
     border: none;
-    padding-top: 7rem;
-    transform: none;
-    overflow-x: hidden;
-    overflow-y: scroll;
+    padding: 7rem 0 0;
     height: 100%;
+    transform: none;
+    overflow-y: scroll;
+    overflow-x: hidden;
     flex-direction: row;
     align-items: center;
     flex-wrap: wrap;
