--- a/src/components/resource-page/ResourcePage.css
+++ b/src/components/resource-page/ResourcePage.css
@@ -3,7 +3,7 @@
   height: 100%;
 }
 .resource-page__container {
-  height: calc(100% - 4rem);
+  height: 20%;
   width: 100%;
   background-color: #0000000a;
   overflow: hidden;
