--- a/src/components/not-found-page/NotFoundPage.css
+++ b/src/components/not-found-page/NotFoundPage.css
@@ -24,6 +24,7 @@
   font-family: 'Poiret One', cursive;
   color: #000;
   letter-spacing: 1rem;
+  margin-right: -1rem;
   font-size: 1.2rem;
   line-height: 4rem;
   text-align: center;
