--- a/src/components/resource-page/ResourcePage.css
+++ b/src/components/resource-page/ResourcePage.css
@@ -5,7 +5,7 @@
 .resource-page__container {
   height: 20%;
   width: 100%;
-  background-color: #0000000a;
+  background-color: white;
   overflow: hidden;
 }
 .resource-page__main {
