Revert "update resource page"
This reverts commit 168b381c8914afe4319a01f9115f51306b0f7dda.

--- a/src/components/resource-page/ResourcePage.css
+++ b/src/components/resource-page/ResourcePage.css
@@ -3,7 +3,7 @@
   height: 100%;
 }
 .resource-page__container {
-  height: 20%;
+  height: calc(100% - 4rem);
   width: 100%;
   background-color: white;
   overflow: hidden;
