phase 2 of 2, convert context to redux

--- a/src/components/modal/template/Success.css
+++ b/src/components/modal/template/Success.css
@@ -2,6 +2,10 @@
   width: 2.5rem;
   margin: 1.5rem auto;
 }
+.modal__message {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
 .modal__success {
   display: inline-block;
   letter-spacing: 1px;
