--- a/src/components/home-page/HomePage.css
+++ b/src/components/home-page/HomePage.css
@@ -29,7 +29,7 @@
 }
 
 .home-logo {
-  font-family: 'Poiret One', cursive;
+  font-family: 'Poiret One';
   position: relative;
   font-size: 2.5vmax;
   float: left;
