remove local image and host in cloudinary

--- a/src/components/contact-page/ContactPage.css
+++ b/src/components/contact-page/ContactPage.css
@@ -7,7 +7,7 @@
   width: 100%;
   overflow: hidden;
   background-size: cover;
-  background-image: url("./image/background.png");
+  background-image: url("https://res.cloudinary.com/diddvpb7x/image/upload/v1597894965/3f0b9143b36e4211287788a7b5113bf2_wi3rmr.png");
 }
 .contact-page__main {
   height: 100%;
