--- a/src/components/drop-down/DropDown.css
+++ b/src/components/drop-down/DropDown.css
@@ -10,7 +10,8 @@
     background-color: #f9f9f9;
     min-width: 10rem;
     width: 100%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border: 1px #e6e6e69c solid;
+    box-shadow: 0px 4px 12px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
 .drop-down__items {
